--- a/test/client/e2e/runner.html
+++ b/test/client/e2e/runner.html
@@ -4,6 +4,7 @@
     <title>End2end Test Runner</title>
     <meta charset="utf-8">
     <script src="../lib/angular/angular-scenario.js" ng-autotest></script>
+    <script src="../lib/custom/userNameGenerator.js"></script>
     <script src="login-scenarios.js"></script>
   </head>
   <body>
