e2e - refactor tests to separate js files for navigation, registration and login

--- a/test/client/e2e/runner.html
+++ b/test/client/e2e/runner.html
@@ -6,7 +6,9 @@
     <script src="../lib/angular/angular-scenario.js" ng-autotest></script>
     <script src="../lib/custom/testUsers.js"></script>
     <script src="../lib/custom/userNameGenerator.js"></script>
+    <script src="navigation-scenarios.js"></script>
     <script src="login-scenarios.js"></script>
+    <script src="register-scenarios.js"></script>
   </head>
   <body>
   </body>
